Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
     sudo apt-get update
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    # apt-get install build-essential
+    sudo apt-get install build-essential
   displayName: 'Run a multi-line script'
