Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,6 @@ steps:
     sudo apt-get update -y
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    sudo apt-get install build-essential -y
-    gfortran --version > version.txt
-    more version.txt
+    sudo apt-get install build-essential gfortran -y
+    gfortran --version
   displayName: 'Run a multi-line script'
